Push workspace to branch Dhia: navbar + cart badge + dashboard charts

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
-            font-family: 'Poppins', 'Segoe UI', sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            font-family: 'Work Sans', 'Inter', 'Roboto', sans-serif;
+            background: linear-gradient(135deg, #4e9c81 0%, #3a7563 100%);
             min-height: 100vh;
             display: flex;
             align-items: center;
@@ -28,9 +28,11 @@
             margin-bottom: 20px;
         }
         h1 {
-            color: #5F9E7F;
+            color: #4e9c81;
             font-size: 3rem;
             margin-bottom: 10px;
+            font-weight: 700;
+            letter-spacing: -0.5px;
         }
         .tagline {
             color: #666;
@@ -44,7 +46,7 @@
             margin-top: 30px;
         }
         .link-card {
-            background: linear-gradient(135deg, #5F9E7F 0%, #4a7d63 100%);
+            background: linear-gradient(135deg, #4e9c81 0%, #3a7563 100%);
             padding: 30px;
             border-radius: 15px;
             color: white;
@@ -57,7 +59,7 @@
         }
         .link-card:hover {
             transform: translateY(-10px);
-            box-shadow: 0 15px 40px rgba(95, 158, 127, 0.4);
+            box-shadow: 0 15px 40px rgba(78, 156, 129, 0.4);
         }
         .link-card i {
             font-size: 3rem;
@@ -71,17 +73,17 @@
             font-size: 0.9rem;
         }
         .secondary {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #ff7849 0%, #ff6837 100%);
         }
         .info-box {
             background: #f8f9fa;
             padding: 20px;
             border-radius: 10px;
             margin-top: 30px;
-            border-left: 4px solid #5F9E7F;
+            border-left: 4px solid #4e9c81;
         }
         .info-box h4 {
-            color: #5F9E7F;
+            color: #4e9c81;
             margin-bottom: 10px;
         }
         .info-box ul {
@@ -93,7 +95,7 @@
             color: #666;
         }
         .info-box li i {
-            color: #5F9E7F;
+            color: #4e9c81;
             margin-right: 10px;
             width: 20px;
         }
@@ -167,11 +169,11 @@
         
         <div style="margin-top: 30px; color: #999; font-size: 0.9rem;">
             <p>📖 Documentation : 
-                <a href="../docs/DASHBOARD_README.md" style="color: #5F9E7F; text-decoration: none; font-weight: 600;">DASHBOARD_README.md</a> | 
-                <a href="../docs/RÉSUMÉ_COMPLET.md" style="color: #5F9E7F; text-decoration: none; font-weight: 600;">RÉSUMÉ_COMPLET.md</a> | 
-                <a href="../docs/DÉMARRAGE_RAPIDE.md" style="color: #5F9E7F; text-decoration: none; font-weight: 600;">DÉMARRAGE_RAPIDE.md</a>
+                <a href="../docs/DASHBOARD_README.md" style="color: #4e9c81; text-decoration: none; font-weight: 600;">DASHBOARD_README.md</a> | 
+                <a href="../docs/RÉSUMÉ_COMPLET.md" style="color: #4e9c81; text-decoration: none; font-weight: 600;">RÉSUMÉ_COMPLET.md</a> | 
+                <a href="../docs/DÉMARRAGE_RAPIDE.md" style="color: #4e9c81; text-decoration: none; font-weight: 600;">DÉMARRAGE_RAPIDE.md</a>
             </p>
-            <p style="margin-top: 10px; color: #5F9E7F; font-weight: 600;">✅ Statut : 100% FONCTIONNEL - Prêt pour Production</p>
+            <p style="margin-top: 10px; color: #4e9c81; font-weight: 600;">✅ Statut : 100% FONCTIONNEL - Prêt pour Production</p>
             <p style="margin-top: 10px;">© 2025 PeaceConnect - Tous droits réservés</p>
         </div>
     </div>
